--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <video autoplay muted loop id="bg-video">
       <source src="video/bg-vid.mp4" type="video/mp4">
     </video>
-    <img src="img/4.png" alt="Nouval" width="200" class="rounded-circle img-thumbnail fade-in">
+    <img src="img/img-profil.png" alt="Nouval" width="200" class="rounded-circle img-thumbnail fade-in">
     <h1 class="fade-in" style="color: aliceblue;">Nouval Lazuardy</h1>
     <p class="lead fade-in" style="color: aliceblue;">Information System at Universitas Hayam Wuruk Perbanas | Web Developer</p>
     <!-- Gelombang -->
