--- a/index.html
+++ b/index.html
@@ -139,10 +139,11 @@
           <div class="card">
             <img src="img/1.png" class="img-thumbnail img-fluid" alt="project 1">
             <div class="card-body">
-              <p class="card-text">Project kedua ini adalah pembuatan
-                aplikasi manajemen task. Pada pembuatan aplikasi manajemen task ini dibagi
-                untuk pengerjaan fitur-fitur barunya, penulis mendapatkan bagian untuk
-                mengembangkan fitur/menu projcet, konfigurasi akses, dan dashboard. </p>
+              <p class="card-text">Project pembuatan Aplikasi Manajemen Task adalah solusi berbasis web yang 
+                dirancang untuk membantu pengguna mengorganisir, 
+                memantau, dan menyelesaikan tugas-tugas mereka secara efisien. 
+                Dibangun dengan teknologi terkini seperti HTML, CSS, JavaScript, dan framework modern, 
+                aplikasi ini menawarkan antarmuka pengguna yang intuitif dan fitur-fitur yang lengkap </p>
             </div>
           </div>
         </div>
@@ -150,22 +151,21 @@
           <div class="card">
             <img src="img/2.png" class="img-thumbnail img-fluid" alt="project 2">
             <div class="card-body">
-              <p class="card-text">Project pertama adalah pembuatan aplikasi kasir, pada project
-                pertama ini bertujuan untuk mengembangkan proses dalam bertransaksi, dalam pembuatan
-                aplikasi ini terdapat kendala pada proses pengembangan dan pengumpulan data barang,
-                stock barang serta transaksi yang akan dilakukan.
+              <p class="card-text">Project pembuatan Aplikasi Toko Buah adalah aplikasi yang dirancang untuk memudahkan pemilik dalam pengelolaan
+                penjualan dan pembelian buah-buahan. Aplikasi ini dibangun dengan teknologi web modern, 
+                menawarkan antarmuka yang menarik dan user-friendly bagi pengguna.
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-4 mb-3 shadow-lg fade-in">
           <div class="card">
-            <img src="img/3.png" class="img-thumbnail img-fluid" alt="project 3">
+            <img src="img/14.png" class="img-thumbnail img-fluid" alt="project 3">
             <div class="card-body">
-              <p class="card-text">Project ketiga adalah membuat aplikasi lowongan kerja, aplikasi
-                lowongan kerja ini bertujuan untuk menyediakan data lowongan kerja di
-                berbagai wilayah dan tempat, pada pembuatan aplikasi ini penulis mendapatkan
-                peran untuk pembuatan dan pengembangan admin page.</p>
+              <p class="card-text">Project pengembangan aplikasi Evomedis adalah aplikasi rekam medis elektronik yang dirancang 
+                untuk memudahkan pengelolaan data medis pasien oleh tenaga kesehatan. Dalam proyek ini, 
+                fokus saya adalah mengembangkan antarmuka pengguna yang intuitif dan efisien, 
+                sehingga memudahkan dokter dan perawat dalam mengakses dan mengelola informasi medis.</p>
             </div>
           </div>
         </div>
@@ -173,28 +173,29 @@
       <div class="row">
         <div class="col-md-4 mb-3 shadow-lg fade-in">
           <div class="card">
-            <img src="img/1.png" class="img-thumbnail img-fluid" alt="project 1">
+            <img src="img/15.png" class="img-thumbnail img-fluid" alt="project 1">
             <div class="card-body">
-              <p class="card-text">Project kedua ini adalah pembuatan
-                aplikasi manajemen task. Pada pembuatan aplikasi manajemen task ini dibagi
-                untuk pengerjaan fitur-fitur barunya, penulis mendapatkan bagian untuk
-                mengembangkan fitur/menu projcet, konfigurasi akses, dan dashboard. </p>
+              <p class="card-text">Website portofolio pribadi ini adalah platform yang dirancang untuk menampilkan berbagai proyek dan 
+                keterampilan saya sebagai seorang pengembang web. Dibangun dengan teknologi web modern, 
+                website ini menawarkan antarmuka yang menarik, navigasi yang mudah, 
+                dan informasi yang komprehensif tentang pengalaman dan keahlian saya. </p>
             </div>
           </div>
         </div>
         <div class="col-md-4 mb-3 shadow-lg fade-in">
           <div class="card">
-            <img src="img/2.png" class="img-thumbnail img-fluid" alt="project 2">
+            <img src="img/16.png" class="img-thumbnail img-fluid" alt="project 2">
             <div class="card-body">
-              <p class="card-text">Project pertama adalah pembuatan aplikasi kasir, pada project
-                pertama ini bertujuan untuk mengembangkan proses dalam bertransaksi, dalam pembuatan
-                aplikasi ini terdapat kendala pada proses pengembangan dan pengumpulan data barang,
-                stock barang serta transaksi yang akan dilakukan.
+              <p class="card-text">Project pembuatan Aplikasi Perpustakaan adalah 
+                platform digital yang dirancang untuk mempermudah 
+                pengelolaan dan akses koleksi buku di perpustakaan. Aplikasi ini dibangun dengan menggunakan
+                teknologi web modern, menawarkan antarmuka yang intuitif 
+                dan fitur-fitur yang lengkap untuk pengguna dan pengelola perpustakaan.
               </p>
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-3 shadow-lg fade-in">
+<!--         <div class="col-md-4 mb-3 shadow-lg fade-in">
           <div class="card">
             <img src="img/3.png" class="img-thumbnail img-fluid" alt="project 3">
             <div class="card-body">
@@ -204,7 +205,7 @@
                 peran untuk pembuatan dan pengembangan admin page.</p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
