--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark shadow sticky-top" style="background-color: #010D44;">
     <div class="container">
-      <a class="navbar-brand" href="https://www.instagram.com/nouval23_?igsh=MTl1ODVha3oyNHR2OA==" target="_blank"><img src="img/logo.png"
+      <a class="navbar-brand" href="https://www.instagram.com/nouval23_?igsh=MTl1ODVha3oyNHR2OA==" target="_blank"><img src="img/17.png"
           alt="Logo" width="30" height="24" class="d-inline-block ">Nouval Lazuardy</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,7 +77,7 @@
       </div>
       <div class="row justify-content-center fs-5">
         <div class="col-md-3 mb-3 fade-in">
-          <img src="img/4.png" alt="Nouval" class="img-thumbnail img-fluid">
+          <img src="img/img-profil.png" alt="Nouval" class="img-thumbnail img-fluid">
         </div>
         <div class="col-md-5 mb-5 fade-in">
           <p>Active student of the Information Systems Study Program at Hayam Wuruk Perbanas University.
