--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- My CSS -->
   <link rel="stylesheet" href="style.css">
-
   <title>Portofolio Nouval Lazuardy</title>
+  <link rel="icon" type="image" href="img/17.png">
 </head>
 
 <body id="home">
